# nekro_order_qqmusic_test

./: README.md  __init__.py  plugin.py  pyproject.toml  router.py
web/: index.html  script.js  style.css
